--- a/eliza.ipynb
+++ b/eliza.ipynb
@@ -253,7 +253,8 @@
         "            break\n",
         "\n",
         "        resp = process(utt)\n",
-        "        print(\"Eliza: %s\" % resp)"
+        "        print(\"Eliza: %s\" % resp)\n",
+        "        print(memstack)"
       ],
       "execution_count": 0,
       "outputs": []
@@ -309,26 +310,67 @@
       "metadata": {
         "id": "HRJXX7Zs-l1m",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 119
+        },
+        "outputId": "242f1540-499b-4cf2-8118-91820c452b86"
       },
       "source": [
         "doctest.run_docstring_examples(task0_true, globals(), name=\"task0\", verbose=True)"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Finding tests in task0\n",
+            "Trying:\n",
+            "    2+2\n",
+            "Expecting:\n",
+            "    4\n",
+            "ok\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "jhYsBBcX_BAD",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 238
+        },
+        "outputId": "4979556a-c08f-46f3-8d02-84c24d991faf"
       },
       "source": [
         "doctest.run_docstring_examples(task0_false, globals(), name=\"task0\", verbose=True)"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Finding tests in task0\n",
+            "Trying:\n",
+            "    2+2\n",
+            "Expecting:\n",
+            "    5\n",
+            "**********************************************************************\n",
+            "File \"__main__\", line 3, in task0\n",
+            "Failed example:\n",
+            "    2+2\n",
+            "Expected:\n",
+            "    5\n",
+            "Got:\n",
+            "    4\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -380,7 +422,7 @@
       "source": [
         "def task3():\n",
         "    \"\"\"\n",
-        "    >>> process(\"no, I am not a negative person\")\n",
+        "    >>> process(\"no I am not a negative person\")\n",
         "    'Is it because you are not a negative person that you came to me?'\n",
         "    >>> process(\"no\")\n",
         "    'You are being a bit negative'\n",
@@ -453,9 +495,19 @@
       },
       "source": [
         "script = {\n",
+        "    \"I\": {\"decomposition\": r\".*(I am)(.*)\",\n",
+        "           \"reassembly\": [r'Is it because you are\\2 that you came to me?']},\n",
         "    \"no\": {\"decomposition\": r\".*\",\n",
-        "           \"reassembly\": [\n",
-        "               \"Are you saying 'no' just to be negative?\"]}}"
+        "           \"reassembly\": [\"Are you saying 'no' just to be negative?\", 'You are being a bit negative', 'Why not']},\n",
+        "    \"yes\": {\"decomposition\": r\".*\",\n",
+        "            \"reassembly\": [\"Tell me more about it\"]   },\n",
+        "    \"none\": {\"decomposition\": r\".*\",\n",
+        "            \"reassembly\": ['I am not sure I understand you fully']},\n",
+        "    \"you\": {\"decomposition\": r\".*are(.*)\",\n",
+        "            \"reassembly\": [r\"What makes you think I am\\1?\", r\"Does it please you to believe I am\\1?\"]},\n",
+        "    \"wife\": {\"decomposition\": r\".*\",\n",
+        "             \"reassembly\": [\"Tell me more about your family\"]}\n",
+        "          }"
       ],
       "execution_count": 0,
       "outputs": []
@@ -478,7 +530,7 @@
         "colab": {}
       },
       "source": [
-        "substitutions = {}"
+        "substitutions = {\"yourself\":\"myself\",\"me\":\"you\"}"
       ],
       "execution_count": 0,
       "outputs": []
@@ -521,52 +573,140 @@
       "metadata": {
         "id": "wn9vlY7W-GQY",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 289
+        },
+        "outputId": "42412fff-393b-4491-c9dc-4abe2d9593b3"
       },
       "source": [
-        "#doctest.run_docstring_examples(task1, globals(), name=\"task1\", verbose=True)"
+        "doctest.run_docstring_examples(task1, globals(), name=\"task1\", verbose=True)"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Finding tests in task1\n",
+            "Trying:\n",
+            "    process(\"I have no problems\")\n",
+            "Expecting:\n",
+            "    \"Are you saying 'no' just to be negative?\"\n",
+            "ok\n",
+            "Trying:\n",
+            "    process(\"no\")\n",
+            "Expecting:\n",
+            "    'You are being a bit negative'\n",
+            "ok\n",
+            "Trying:\n",
+            "    process(\"no\")\n",
+            "Expecting:\n",
+            "    'Why not'\n",
+            "ok\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "brEFxEODftlt",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 119
+        },
+        "outputId": "bccb778e-7e7e-45cf-c631-b510757945d1"
       },
       "source": [
-        "#doctest.run_docstring_examples(task2, globals(), name=\"task2\", verbose=True)\n"
+        "doctest.run_docstring_examples(task2, globals(), name=\"task2\", verbose=True)\n"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 37,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Finding tests in task2\n",
+            "Trying:\n",
+            "    process(\"hmm\")\n",
+            "Expecting:\n",
+            "    'I am not sure I understand you fully'\n",
+            "ok\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "zm48COwCftyU",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 204
+        },
+        "outputId": "bc3a4074-641c-46fc-86d1-db7c6e9f11c7"
       },
       "source": [
-        "#doctest.run_docstring_examples(task3, globals(), name=\"task3\", verbose=True)\n"
+        "doctest.run_docstring_examples(task3, globals(), name=\"task3\", verbose=True)\n"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 56,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Finding tests in task3\n",
+            "Trying:\n",
+            "    process(\"no, I am not a negative person\")\n",
+            "Expecting:\n",
+            "    'Is it because you are not a negative person that you came to me?'\n",
+            "ok\n",
+            "Trying:\n",
+            "    process(\"no\")\n",
+            "Expecting:\n",
+            "    'You are being a bit negative'\n",
+            "ok\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "rzZ428QQft79",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 204
+        },
+        "outputId": "03b9ee07-5d11-4b74-b52b-a6e5c55b3b18"
       },
       "source": [
-        "#doctest.run_docstring_examples(task4, globals(), name=\"task4\", verbose=True)\n"
+        "doctest.run_docstring_examples(task4, globals(), name=\"task4\", verbose=True)\n"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 75,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Finding tests in task4\n",
+            "Trying:\n",
+            "    process(\"you are repeating yourself\")\n",
+            "Expecting:\n",
+            "    'What makes you think I am repeating myself?'\n",
+            "ok\n",
+            "Trying:\n",
+            "    process(\"you are kidding me\")\n",
+            "Expecting:\n",
+            "    'Does it please you to believe I am kidding you?'\n",
+            "ok\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -576,7 +716,7 @@
         "colab": {}
       },
       "source": [
-        "#doctest.run_docstring_examples(task4, globals(), name=\"task5\", verbose=True)"
+        "doctest.run_docstring_examples(task4, globals(), name=\"task5\", verbose=True)"
       ],
       "execution_count": 0,
       "outputs": []
@@ -596,26 +736,86 @@
       "metadata": {
         "id": "6PgbPkck-GeF",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 663
+        },
+        "outputId": "35878ed0-a321-48e5-97c2-f3b98b545abe"
       },
       "source": [
         "chat()"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 83,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "<hit enter with no input to exit>\n",
+            "Eliza: How do you do. Please tell me your problem\n",
+            "Student: no\n",
+            "Eliza: You are being a bit negative\n",
+            "[]\n",
+            "Student: yes\n",
+            "Eliza: Tell me more about it\n",
+            "[]\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "error",
+          "ename": "KeyboardInterrupt",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+            "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/ipykernel/kernelbase.py\u001b[0m in \u001b[0;36m_input_request\u001b[0;34m(self, prompt, ident, parent, password)\u001b[0m\n\u001b[1;32m    729\u001b[0m             \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 730\u001b[0;31m                 \u001b[0mident\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mreply\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msession\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrecv\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstdin_socket\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    731\u001b[0m             \u001b[0;32mexcept\u001b[0m \u001b[0mException\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/jupyter_client/session.py\u001b[0m in \u001b[0;36mrecv\u001b[0;34m(self, socket, mode, content, copy)\u001b[0m\n\u001b[1;32m    802\u001b[0m         \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 803\u001b[0;31m             \u001b[0mmsg_list\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msocket\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrecv_multipart\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmode\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcopy\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mcopy\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    804\u001b[0m         \u001b[0;32mexcept\u001b[0m \u001b[0mzmq\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mZMQError\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0me\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/zmq/sugar/socket.py\u001b[0m in \u001b[0;36mrecv_multipart\u001b[0;34m(self, flags, copy, track)\u001b[0m\n\u001b[1;32m    465\u001b[0m         \"\"\"\n\u001b[0;32m--> 466\u001b[0;31m         \u001b[0mparts\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrecv\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mflags\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcopy\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mcopy\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtrack\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mtrack\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    467\u001b[0m         \u001b[0;31m# have first part already, only loop while more to receive\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32mzmq/backend/cython/socket.pyx\u001b[0m in \u001b[0;36mzmq.backend.cython.socket.Socket.recv\u001b[0;34m()\u001b[0m\n",
+            "\u001b[0;32mzmq/backend/cython/socket.pyx\u001b[0m in \u001b[0;36mzmq.backend.cython.socket.Socket.recv\u001b[0;34m()\u001b[0m\n",
+            "\u001b[0;32mzmq/backend/cython/socket.pyx\u001b[0m in \u001b[0;36mzmq.backend.cython.socket._recv_copy\u001b[0;34m()\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/zmq/backend/cython/checkrc.pxd\u001b[0m in \u001b[0;36mzmq.backend.cython.checkrc._check_rc\u001b[0;34m()\u001b[0m\n",
+            "\u001b[0;31mKeyboardInterrupt\u001b[0m: ",
+            "\nDuring handling of the above exception, another exception occurred:\n",
+            "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-83-e57ee30c65ef>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mchat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;32m<ipython-input-82-bdf6173c11e2>\u001b[0m in \u001b[0;36mchat\u001b[0;34m()\u001b[0m\n\u001b[1;32m     11\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Eliza: How do you do. Please tell me your problem\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m     \u001b[0;32mwhile\u001b[0m \u001b[0;32mTrue\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 13\u001b[0;31m         \u001b[0mutt\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0minput\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Student: \"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     14\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mutt\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     15\u001b[0m             \u001b[0;32mbreak\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/ipykernel/kernelbase.py\u001b[0m in \u001b[0;36mraw_input\u001b[0;34m(self, prompt)\u001b[0m\n\u001b[1;32m    703\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_parent_ident\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    704\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_parent_header\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 705\u001b[0;31m             \u001b[0mpassword\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    706\u001b[0m         )\n\u001b[1;32m    707\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/ipykernel/kernelbase.py\u001b[0m in \u001b[0;36m_input_request\u001b[0;34m(self, prompt, ident, parent, password)\u001b[0m\n\u001b[1;32m    733\u001b[0m             \u001b[0;32mexcept\u001b[0m \u001b[0mKeyboardInterrupt\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    734\u001b[0m                 \u001b[0;31m# re-raise KeyboardInterrupt, to truncate traceback\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 735\u001b[0;31m                 \u001b[0;32mraise\u001b[0m \u001b[0mKeyboardInterrupt\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    736\u001b[0m             \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    737\u001b[0m                 \u001b[0;32mbreak\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "L6xdTcqMEmTu",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "3436d516-2a2c-497e-db9f-047414b01d18"
       },
       "source": [
-        ""
+        "memstack"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 73,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 73
+        }
+      ]
     }
   ]
 }
